Fix font size for code on iphone

--- a/themes/onwijs/static/css/style.css
+++ b/themes/onwijs/static/css/style.css
@@ -579,6 +579,9 @@ blockquote:before {
 }
 
 @media (max-width: 800px) {
+    body {
+        -webkit-text-size-adjust: none;
+    }
     .postlist article {
         flex-direction: column;
     }
